objects/CMPL123QMS__Internal_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Audits (Account)</relationshipLabel>
        <relationshipName>Internal_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Audit_End_Date__c</fullName>
        <label>Actual Audit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Plan</label>
        <referenceTo>Audit_Plan__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Result__c</fullName>
        <label>Audit Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Minor Findings</fullName>
                </value>
                <value>
                    <fullName>Moderate Findings</fullName>
                </value>
                <value>
                    <fullName>Major Findings</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Sub_Type__c</fullName>
        <label>Audit Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Audit</fullName>
                </value>
                <value>
                    <fullName>System Audit</fullName>
                </value>
                <value>
                    <fullName>Vendor Audit</fullName>
                </value>
                <value>
                    <fullName>Clinical Operation</fullName>
                </value>
                <value>
                    <fullName>Medical Writing</fullName>
                </value>
                <value>
                    <fullName>Study Management</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Pre-clinical Study Protocol</fullName>
                </value>
                <value>
                    <fullName>Pre-clinical Study Report</fullName>
                </value>
                <value>
                    <fullName>Study Conduct</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Title__c</fullName>
        <label>Audit Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <label>Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMP</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>GLP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Actual_Audit_Date__c</fullName>
        <label>Actual Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Applicable_Standards_and_Clauses__c</fullName>
        <label>Applicable Standards and Clauses</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Audit_Objectives_Planned__c</fullName>
        <label>Audit Objectives - Planned</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Audit_Scope_Actual__c</fullName>
        <label>Audit Scope - Actual</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Audit_Scope__c</fullName>
        <label>Audit Scope</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Audit_Summary__c</fullName>
        <label>Audit Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__External_Workflow_Action_Performed_By__c</fullName>
        <label>External Workflow Action Performed By</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__External_Workflow_Action_Performed_On__c</fullName>
        <label>External Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Integration_ID__c</fullName>
        <label>Integration ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lead_Auditor_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lead_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead Auditor lookup to Account Object</description>
        <label>Lead Auditor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Audits</relationshipLabel>
        <relationshipName>Internal_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Manager_of_Area_to_be_Audited__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager of Area to be Audited</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Audits (Manager of Area to be Audited)</relationshipLabel>
        <relationshipName>Internal_Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__MessageID__c</fullName>
        <externalId>true</externalId>
        <label>Message ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Planned_Audit_Date__c</fullName>
        <label>Planned Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__QS_Process_or_Element__c</fullName>
        <label>QS Process or Element</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__SOPs__c</fullName>
        <label>SOPs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Suggestions_for_Improvement__c</fullName>
        <label>Suggestions for Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123QMSInternal_AuditcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Approval_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Approval Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Audit_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Audit Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Audit_Date__c</fullName>
        <label>Next Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Audit_End_Date__c</fullName>
        <label>Planned Audit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Summary__c</fullName>
        <label>Response Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Internal Audit</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Audit_Scope__c</columns>
        <columns>CMPL123QMS__Lead_Auditor__c</columns>
        <columns>CMPL123QMS__QS_Process_or_Element__c</columns>
        <columns>CMPL123QMS__Planned_Audit_Date__c</columns>
        <columns>CMPL123QMS__Actual_Audit_Date__c</columns>
        <columns>CMPL123QMS__Manager_of_Area_to_be_Audited__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Internal Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Audits</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>